package com.codegym;

abstract class Animal {
    public abstract void makeSound();
}