package com.codegym;

class Apple extends Fruit {
    @Override
    public void howToEat() {
        System.out.println("We have to peel it and eat");
    }
}