package com.codegym;

public interface Edible {
    void howToEat();
}