package com.codegym;

abstract class Fruit implements Edible{
    
}