package com.codegym;

class Orange extends Fruit {
    @Override
    public void howToEat() {
        System.out.println("We have to cut and eat");
    }
}